# linfit

src/: Makefile.in  configure  configure.ac  linfit.1  linfit.c  polyfit.c
